# freeserf

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  COLOR_DEBUG_GUIDE.md  HACKING.md  SDL3-migration.md  SDL3_AUDIO_MIGRATION_FINDINGS.md  SDL3_MIGRATION_PLAN.md  building-sequence-implementation-plan.md  conanfile.py  road-building-implementation-plan.md
cmake/: FetchSDL.cmake
src/: CMakeLists.txt  audio-sdlmixer.cc  audio-sdlmixer.h  debug.cc  debug.h  event_loop-dummy.cc  event_loop-dummy.h  event_loop-sdl.cc  event_loop-sdl.h  freeserf.cc  game-init.cc  game.cc  gui.cc  headless-handler.cc  headless-handler.h  headless.h  minimap.cc  misc.h  player.cc  sdl_compat.cc  sdl_compat.h  sprite-file-sdl.cc  video-dummy.cc  video-dummy.h  video-sdl.cc  video-sdl.h
src/ai/: agent-factory.cc  agent-factory.h  agent-integration.cc  agent-integration.h  agent.h  ai-action.h  ai-logger.cc  ai-logger.h  game-state.h  player-agent-extensions.cc  player-agent-extensions.h  random-agent.cc  random-agent.h  scripted-agent.cc  scripted-agent.h
src/ai/test/: mock-agent.cc  mock-agent.h
tests/: CMakeLists.txt
work-logs/: Phase0AgentImplementation.md  phase0.2.md  phase0.3.md
